--- a/package.json
+++ b/package.json
@@ -13,17 +13,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "gulp": "^4.0.1",
+    "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-clean-css": "^4.2.0",
     "gulp-less": "^4.0.1",
     "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "require-dir": "^1.2.0"
   },
-  "dependencies": {
-    
-  },
+  "dependencies": {},
   "browser": [
     "chrome >= 40"
   ]
